<resources>
    <string name="app_name">Newsfeed</string>
    <string name="newsfeed">Newsfeed</string>
    <string name="home">Home</string>
    <string name="tech">Tech</string>
    <string name="entertainment">Entertainment</string>
    <string name="sports">Sports</string>
    <string name="business">Business</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
</resources>