<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/background_gradient">

    <Toolbar
        android:id="@+id/mainToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/newsfeed"
                android:textSize="32sp"
                android:layout_marginVertical="5dp"
                android:layout_marginHorizontal="5dp"
                android:textColor="@color/orange"/>

        </LinearLayout>

    </Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/mainTabSelector"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toBottomOf="@id/mainToolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/transparent"
        app:tabTextColor="@color/white"
        app:tabSelectedTextColor="@color/orange"
        app:tabIndicatorColor="@color/orange"
        app:tabIndicatorHeight="3dp"
        app:tabMode="scrollable">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/homeTabItem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/home"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/techTabItem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tech"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/healthTabItem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/health"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/scienceTabItem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/science"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/sportsTabItem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/sports"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/businessTabItem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/business"/>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/entertainmentTabItem"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/entertainment"/>


    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mainTabSelector"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>